compiler/testData/diagnostics/tests/when/guard/whenWithGuardEnabled.diag.txt
/whenWithGuardEnabled.kt:16:26: error: the feature "when guards" is not supported in language versions 1.*, please use version 2.0 or later
        is BooleanHolder if x.value -> Unit
                         ^^^^^^^^^^
/whenWithGuardEnabled.kt:17:25: error: the feature "when guards" is not supported in language versions 1.*, please use version 2.0 or later
        is StringHolder if x.value != null &&
                        ^^^^^^^^^^^^^^^^^^^^^
/whenWithGuardEnabled.kt:19:14: error: the feature "when guards" is not supported in language versions 1.*, please use version 2.0 or later
        else if x is Boolean && x -> Unit
             ^^^^^^^^^^^^^^^^^^^^
/whenWithGuardEnabled.kt:27:28: error: the feature "when guards" is not supported in language versions 1.*, please use version 2.0 or later
        x is BooleanHolder if x.value -> Unit
                           ^^^^^^^^^^
/whenWithGuardEnabled.kt:29:14: error: the feature "when guards" is not supported in language versions 1.*, please use version 2.0 or later
        else if x is Boolean -> Unit
             ^^^^^^^^^^^^^^^
/whenWithGuardEnabled.kt:37:27: error: the feature "when guards" is not supported in language versions 1.*, please use version 2.0 or later
        is True, is False if x.value -> Unit
                          ^^^^^^^^^^
/whenWithGuardEnabled.kt:45:18: error: the feature "when guards" is not supported in language versions 1.*, please use version 2.0 or later
        is False if x.value -> Unit
                 ^^^^^^^^^^
/whenWithGuardEnabled.kt:52:18: error: the feature "when guards" is not supported in language versions 1.*, please use version 2.0 or later
        is False if x.value -> Unit
                 ^^^^^^^^^^

